<resources>
    <string name="app_name">MyApplication</string>
    <string name="start_activity_standard">Start activity in standard launch mode</string>
    <string name="test_button1">Custom View Follow Finger</string>
    <string name="test_binder">IPC call</string>
    <string name="add_book">Add Book</string>
    <string name="get_books">Get Book List</string>
    <string name="start_recycler">Start RecyclerView</string>
    <string name="one_activity">One Activity Architect</string>
    <string name="start_tic_tac_toe">Start Tic Tac Toe</string>
    <string name="tic_tac_toe_label">Tic Tac Toe</string>
    <string name="menu_reset">Reset</string>

    <string name="nav1">商品</string>
    <string name="nav2">历史</string>
    <string name="nav3">我的</string>
    <string name="nav4">关于</string>
</resources>
