<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <Button
        android:id="@+id/testbinder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_binder" />

    <Button
        android:id="@+id/add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_book" />

    <Button
        android:id="@+id/get_books"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_books" />

    <Button
        android:id="@+id/start_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_activity_standard" />

    <com.test.myapplication.ui.TestButton
        android:layout_marginTop="20dp"
        android:id="@+id/test1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_button1" />

</LinearLayout>